[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/tiles/Textures/nether reich syle concept.png" type="Texture" id=1]
[ext_resource path="res://statics/HighHouse/HighHouseStatic.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/tiles/TownSquareRoom/TownSquareRoom.gd" type="Script" id=3]
[ext_resource path="res://logic/CameraLockTrigger/CameraLockTrigger.tscn" type="PackedScene" id=4]
[ext_resource path="res://statics/HighHouse/HouseRowGeneric.tscn" type="PackedScene" id=5]
[ext_resource path="res://statics/House/Hoose.tscn" type="PackedScene" id=6]
[ext_resource path="res://logic/RoomDoor/RoomDoor.tscn" type="PackedScene" id=7]
[ext_resource path="res://logic/LevelDoor/LevelDoor.tscn" type="PackedScene" id=8]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )

[node name="TownSquareRoom" type="Spatial"]
script = ExtResource( 3 )

[node name="Statics" type="Spatial" parent="."]

[node name="HighHouseStatic3" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( -0.99566, 0, 0.0930657, 0, 1, 0, -0.0930657, 0, -0.99566, 28.7022, 0, 26.2007 )

[node name="Spatial7" parent="Statics" instance=ExtResource( 5 )]
transform = Transform( -0.0194414, 0, 0.999811, 0, 1, 0, -0.999811, 0, -0.0194414, -1.52126, 0, 30.1571 )

[node name="Spatial6" parent="Statics" instance=ExtResource( 5 )]
transform = Transform( -0.0194414, 0, 0.999811, 0, 1, 0, -0.999811, 0, -0.0194414, 15.1019, 0, 31.8362 )

[node name="Spatial5" parent="Statics" instance=ExtResource( 5 )]
transform = Transform( -0.999477, 0, 0.032353, 0, 1, 0, -0.032353, 0, -0.999477, 28.7235, 0, 16.7716 )

[node name="Spatial3" parent="Statics" instance=ExtResource( 5 )]
transform = Transform( -0.966484, 0, -0.256728, 0, 1, 0, 0.256728, 0, -0.966484, 29.694, 0, -0.0960045 )

[node name="Spatial2" parent="Statics" instance=ExtResource( 5 )]
transform = Transform( 0.0247112, 0, -0.999695, 0, 1, 0, 0.999695, 0, 0.0247112, 21.2237, 0, -10.3166 )

[node name="Spatial" parent="Statics" instance=ExtResource( 5 )]
transform = Transform( 0.0247112, 0, -0.999695, 0, 1, 0, 0.999695, 0, 0.0247112, 4.69204, 0, -10.3166 )

[node name="HighHouseStatic6" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 0.162706, 0, 0.986675, 0, 1, 0, -0.986675, 0, 0.162706, -7.00154, -1.90735e-06, 29.6065 )

[node name="HighHouseStatic7" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29.103, 0, 21.341 )

[node name="HighHouseStatic5" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1.20243, 0, 0, 0, 1, -8.53722, 0, -5.16187 )

[node name="HighHouseStatic2" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1.20243, 0, 0, 0, 1, -9.487, 0, 27.9618 )

[node name="HighHouseStatic" parent="Statics" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 2.2766e-06, 0, -6.98684, -9.25791, -0.575809, 10.8197 )

[node name="Ground4" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 20, 0, 20 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Ground2" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 20, 0, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Ground3" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 20 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="Ground" type="CSGMesh" parent="Statics"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="CameraLockTrigger" parent="Statics" instance=ExtResource( 4 )]
transform = Transform( 3.65088, 0, 0, 0, 1, 0, 0, 0, 7.09635, 10.9131, 0, 9.46037 )

[node name="Child1NorthRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.41659, 0, 27 )

[node name="Child1WestRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.93192, 0, 16.977 )

[node name="Child2NorthRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 19.1214, 0, 28.5317 )

[node name="Child2EastRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 26.9124, 0, 21.2749 )

[node name="OriginWestRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7, 0, 0 )

[node name="OriginSouthRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.83889, 0, -7.87941 )

[node name="Child0EastRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( 0.225767, 0, -0.974181, 0, 1, 0, 0.974181, 0, 0.225767, 28, 0, 0.382905 )

[node name="Child0SouthRoomDoor" parent="Statics" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.1099, 0, -8 )

[node name="ChurchLevelDoor" parent="Statics" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 22.5, 0, 10 )
target_level_id = "tutorial"

[node name="hoose" parent="." instance=ExtResource( 6 )]
transform = Transform( -0.052908, 0, -2.36419, 0, 1, 0, 2.36419, 0, -0.052908, 8.94591, -0.543861, 9.7731 )

[node name="hoose2" parent="hoose" instance=ExtResource( 6 )]
transform = Transform( -0.379069, 0, -0.00848322, 0, 2.33483, 0, 0.00848322, 0, -0.379069, -0.00152874, 0.543861, -3.87528 )
